# NOTE:
# https://packaging.python.org/ja/latest/specifications/
[project]
name = "yt-vv"
version = "1.0.0"
authors = [
  {name = "Takahiro INOUE", email = "takahiro.inoue@mail.3dcg-arts.net"},
]
maintainers = [
  {name = "Takahiro INOUE", email = "takahiro.inoue@mail.3dcg-arts.net"},
]
description = "The yt-vv is YouTube video data validator by using YouTube data API v3. You can verify the available if the inputed YouTube video ID is valid."
license = {file = "LICENSE"}
requires-python = ">=3.10"

dependencies = [
  "google-api-python-client >= 2.155",
]

[project.scripts]
yt-vv = "cli:main"

[project.urls]
"Homepage" = "https://github.com/hinata/yt-vv"

[tool.setuptools.packages.find]
where = [
  "src",
]

[build-system]
requires = [
  "setuptools",
]
